实现agent chat第一版v1 目标agent ide，类似codex。